--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,8 +3,8 @@
 
 <div class="row">
   <div class="span6 offset3">
-    <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
+  <%= form_for(@user) do |f| %>
+      <%= render 'shared/error_messages', object: f.object %>
 
       <%= f.label :name %>
       <%= f.text_field :name %>
@@ -22,6 +22,6 @@
     <% end %>
 
     <%= gravatar_for @user %>
-    <a href="http://gravatar.com/emails" target="_blank">change</a>
+    <a href="http://gravatar.com/emails">change</a>
   </div>
 </div>
