Made some modifications to the intro text.

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, 'About Us') %>
 <h1>About Us</h1>
+<p>This project was created with the assistance of the development team at Citrrus, and with guidance and code from Michael Hartl of <a href="http://railstutorial.org/">railstutorial.org</a>.  Please check out his project to learn more about developing with Ruby on Rails.</p>
+
 <p>
   The <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
   is a project to make a book and screencasts to teach web development
