Cleaning up some stuff.

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Help') %>
 <h1>Help</h1>
 <p>
-  If you need assistance, please <a href="mailto:lucasma@pwcs.edu">contact Miss Lucas</a>
+  If you need assistance, please <a href="mailto:lucasma@pwcs.edu">contact Ms. Lucas</a>
 </p>
