--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,6 +8,9 @@
       <%= f.label :name %>
       <%= f.text_field :name %>
 
+      <%= f.label :section %>
+      <%= f.select :section, [['Section 1', 1], ['Section 2', 2], ['Section 3', 3]]  %>
+
       <%= f.label :email %>
       <%= f.text_field :email %>
 
