Added pages and specs for Lessons

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'All users') %>
+<% provide(:title, 'Sections') %>
 <h1><%= @currentSection %>	</h1>
 
 <%= form_tag 'users' , :method => "get", :id=> 'filter_users_form' do %>
