Wasted a bunch of time trying to set the current lesson for users.

--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,9 +1,12 @@
 <% provide(:title, 'Lessons') %>
 <h1>Lessons</h1>
- 
- <%= link_to "New Lesson", new_lesson_path, class: "btn btn-large btn-primary" %>
 
-
-<ul class="lessons"> 
+<ul id="lessons" class="nav nav-pills pull-left"> 
 	<%= render @lessons %>
+	<li></li>
 </ul>
+
+
+<%= link_to "New Lesson", new_lesson_path, class: "btn btn-large btn-primary pull-right" %>
+
+<div class="clear">&nbsp;</div>
