--- a/app/views/website_contents/show.html.erb
+++ b/app/views/website_contents/show.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, @wc.name ) %>
 <h1><%= @wc.name %></h1>
-<h3><a href="<%= @wc.contentlink %>">visit</a></h3>
+<iframe src="<%= @wc.contentlink %>"></iframe>
