--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -240,3 +240,13 @@ aside {
     margin-bottom: 5px;
   }
 }
+
+/* lessons */
+
+#wcFrame {
+  border-bottom: 1px solid $grayMediumLight;
+  border-top: 1px solid $grayMediumLight;
+  border-left: 0;
+  border-right: 0;
+  color: $grayLight;
+}
