--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,13 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
-    <div class="container">
+    <div id="mainContentContainer" class="container">
       <% flash.each do |key, value| %>
         <%= content_tag(:div, value, class: "alert alert-#{key}") %>
       <% end %>
       <%= yield %>
+    </div>
+    <div class="container">
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
     </div>
