--- a/app/views/website_contents/show.html.erb
+++ b/app/views/website_contents/show.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, @wc.name ) %>
 <h1><%= @wc.name %></h1>
-<iframe width="100%" height="800px" src="<%= @wc.contentlink %>"></iframe>
+<iframe id="wcFrame" src="<%= @wc.contentlink %>"></iframe>
