--- a/app/views/website_contents/new.html.erb
+++ b/app/views/website_contents/new.html.erb
@@ -9,6 +9,7 @@
       <%= f.text_field :name %>
       <%= f.label :contentlink %>
       <%= f.text_field :contentlink %>
+      <%= f.hidden_field :lesson_id, :value => @lesson.id %>
       <%= f.submit "Add Content", class: "btn btn-large btn-primary" %>
       <% end %>
 	</div>
