--- a/app/views/website_contents/show.html.erb
+++ b/app/views/website_contents/show.html.erb
@@ -1,3 +1,12 @@
 <% provide(:title, @wc.name ) %>
-<h1><%= @wc.name %></h1>
+
+<div class="container">
+	<% unless @wc.lesson.previous_content(@wc.id).nil? %>
+		<%= link_to "<", @wc.lesson.previous_content(@wc.id), :class => "btn pull-left" %>
+	<% end %>
+	<% unless @wc.lesson.next_content(@wc.id).nil? %>
+	<%= link_to ">", @wc.lesson.next_content(@wc.id), :class => "btn pull-right" %>
+	<% end %>
+	<h1><%= @wc.name %></h1>
+</div>
 <iframe id="wcFrame" src="<%= @wc.contentlink %>"></iframe>
