--- a/app/views/lessons/_lesson.html.erb
+++ b/app/views/lessons/_lesson.html.erb
@@ -1,3 +1,3 @@
-<li class="<%= (lesson.id == @currentLesson) ? "active" : "fail" %>" id="<%= lesson.name.gsub ' ', '_' %>">
+<li id="<%= lesson.name.gsub ' ', '_' %>">
 	<%= link_to lesson.name, lesson %>
 </li>
