--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -8,6 +8,12 @@
 <% end%>
 <h1><%= @lesson.name %></h3>
 
+<h3>Videos:</h3>
+<br/>
+<ul class="nav nav-tabs nav-stacked">
+	<%= render(@lesson.video_contents) %>
+</ul>
+
 <h3>Readings:</h3>
 <br/>
 <ul class="nav nav-tabs nav-stacked">
@@ -15,3 +21,5 @@
 </ul>
 
 <%= link_to "Add Reading", new_website_content_path(:params => {:lesson_id => @lesson.id}), class: "btn btn-large btn-primary"  %>
+
+<%= link_to "Add Video", new_video_content_path(:params => {:lesson_id => @lesson.id}), class: "btn btn-large btn-primary"  %>
