--- a/app/views/website_contents/show.html.erb
+++ b/app/views/website_contents/show.html.erb
@@ -8,5 +8,7 @@
 	<%= link_to ">", @wc.lesson.next_content(@wc.id), :class => "btn pull-right" %>
 	<% end %>
 	<h1><%= @wc.name %></h1>
+	<div class="center"><%= link_to "back to #{@wc.lesson.name}", @wc.lesson, :class => "btn btn-small" %></div>
+	<br/>
 </div>
 <iframe id="wcFrame" src="<%= @wc.contentlink %>"></iframe>
