Added downloads to the lesson page.

--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -20,6 +20,14 @@
 	<%= render(@lesson.website_contents) %>
 </ul>
 
+<h3>Downloads:</h3>
+<br/>
+<ul class="nav nav-tabs nav-stacked">
+	<%= render(@lesson.download_contents) %>
+</ul>
+
 <%= link_to "Add Reading", new_website_content_path(:params => {:lesson_id => @lesson.id}), class: "btn btn-large btn-primary"  %>
 
 <%= link_to "Add Video", new_video_content_path(:params => {:lesson_id => @lesson.id}), class: "btn btn-large btn-primary"  %>
+
+<%= link_to "Add Download", new_download_content_path(:params => {:lesson_id => @lesson.id}), class: "btn btn-large btn-primary"  %>
