--- a/app/views/video_contents/show.html.erb
+++ b/app/views/video_contents/show.html.erb
@@ -1,5 +1,12 @@
 <% provide(:title, @vc.name) %>
+<% unless @vc.lesson.previous_content(@vc.id, "vc").nil? %>
+	<%= link_to "<", @vc.lesson.previous_content(@vc.id, "vc"), :class => "btn pull-left" %>
+<% end %>
+<% unless @vc.lesson.next_content(@vc.id, "vc").nil? %>
+<%= link_to ">", @vc.lesson.next_content(@vc.id, "vc"), :class => "btn pull-right" %>
+<% end %>
 <h1><%= @vc.name %></h1>
+
 <div class="center"><%= link_to "back to #{@vc.lesson.name}", @vc.lesson, :class => "btn btn-small" %></div>
 <br/>
 <div id="embeddedVideo"><%= raw @vc.video_embed_code %></div>
