--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -8,6 +8,9 @@
 <% end%>
 <h1><%= @lesson.name %></h3>
 
+<div id="lessonInstructions" class="center row"><%= @lesson.instructions %></div>
+<br/>
+
 <h3>Videos:</h3>
 <br/>
 <ul class="nav nav-tabs nav-stacked">
