--- a/app/views/lessons/new.html.erb
+++ b/app/views/lessons/new.html.erb
@@ -7,7 +7,8 @@
       <%= render 'shared/error_messages', object: f.object %>
       <%= f.label :name %>
       <%= f.text_field :name %>
-      
+      <%= f.label :instructions %>
+      <%= f.text_area :instructions %>
       <%= f.submit "Create New Lesson", class: "btn btn-large btn-primary" %>
     <% end %>
 
