--- a/app/views/video_contents/new.html.erb
+++ b/app/views/video_contents/new.html.erb
@@ -8,6 +8,8 @@
       <%= f.text_field :name %>
       <%= f.label :video_embed_code %>
       <%= f.text_area :video_embed_code %>
+      <%= f.label :instructions %>
+      <%= f.text_area :instructions %>
       <%= f.hidden_field :lesson_id, :value => @lesson.id %>
       <%= f.submit "Add Content", class: "btn btn-large btn-primary" %>
   <% end %>
