--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,15 @@
 <header class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "flipped classroom", root_path, id: "logo" %>
+      <%= link_to "flipped classroom", lessons_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
-          <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "Home", home_path %></li>
           <li><%= link_to "Help", help_path %></li>
           <% if signed_in? %>
+            <% if current_user.admin? %>
             <li><%= link_to "Users", users_path %></li>
+            <% end %>
             <li><%= link_to "Lessons", lessons_path %></li>
             <li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
