--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,15 +4,17 @@
       <section>
         <%= render 'shared/user_info' %>
       </section>
+      <% if current_user.admin? %>
       <section>
         <%= render 'shared/stats' %>
       </section>
       <section>
         <%= render 'shared/micropost_form' %>
       </section>
+      <% end %>
     </aside>
     <div class="span8">
-      <h3>Micropost Feed</h3>
+      <h3>Update Feed</h3>
       <%= render 'shared/feed' %>
     </div>
   </div>
