--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,7 +20,7 @@
   </div>
 <% else %>
   <div class="center hero-unit">
-    <h1>Welcome to the Ms. Lucas's APUSH Flipped Classroom</h1>
+    <h1>Welcome to Ms. Lucas's APUSH Flipped Classroom</h1>
 
     <h2>
       Signup to learn lots!
