Added editing for lessons.

--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -8,8 +8,15 @@
 <% end%>
 <h1><%= @lesson.name %></h3>
 
-<div id="lessonInstructions" class="center row"><%= @lesson.instructions %></div>
+<div id="lessonInstructions" class="center row">
+	<%= @lesson.instructions %>
+	<br/>
+	<% if current_user.admin? %>
+	<%= link_to 'edit lesson', edit_lesson_path %>
+	<% end %>
+	</div>
 <br/>
+
 
 <% if @lesson.video_contents.count > 0 %>
 
