Added editing to Videos and Downloads and made sure that only admins saw the edit links.

--- a/app/views/download_contents/show.html.erb
+++ b/app/views/download_contents/show.html.erb
@@ -8,7 +8,13 @@
 <h1><%= @dc.name %></h1>
 <div class="center"><%= link_to "back to #{@dc.lesson.name}", @dc.lesson, :class => "btn btn-small" %></div>
 <br/>
-<div id="downloadInstructions" class="center row"><%= @dc.instructions %></div>
+<div id="downloadInstructions" class="center row">
+	<%= @dc.instructions %>
+	<% if current_user.admin? %>
+	<br/>
+	<%= link_to 'edit download', edit_download_content_path %>
+	<% end %>
+</div>
 <br/>
 <div class="center row"><%= link_to "Download", @dc.download_link, :class => "btn btn-small", :target => "_blank" %></div>
  
