--- a/app/views/website_contents/show.html.erb
+++ b/app/views/website_contents/show.html.erb
@@ -13,6 +13,10 @@
 		<% if current_user.admin? %>
 		<br/>
 		<%=  link_to'edit reading', edit_website_content_path %> 
+		<br/>
+	    <%= link_to "delete", @wc, method: :delete,
+	                                     data: { confirm: "You sure?" },
+	                                     title: @wc.name %>
 		<% end %>
 	</div>
 	<br/>
