Change button styling on download in order to emphasize

--- a/app/views/download_contents/show.html.erb
+++ b/app/views/download_contents/show.html.erb
@@ -20,5 +20,5 @@
 	<% end %>
 </div>
 <br/>
-<div class="center row"><%= link_to "Download", @dc.download_link, :class => "btn btn-small", :target => "_blank" %></div>
+<div class="center row"><%= link_to "Download", @dc.download_link, :class => "btn btn-large btn-primary", :target => "_blank" %></div>
  
